--- a/src/main/resources/templates/matches/list.html
+++ b/src/main/resources/templates/matches/list.html
@@ -16,7 +16,7 @@
 								<div class="col-xs-10">
 							  		<span class="bold" th:text="${match.teamOne.name}">Deutschland</span> <span> - </span><span class="bold" th:text="${match.teamTwo.name}">Italien</span>
 									<br/>
-									<span th:text="${match.kickOffDateFormated}">04.08.2015, 19:15 Uhr</span><br/> 
+									<span th:text="${#dates.format(match.kickOffDate, 'E dd.MM.yyyy HH:mm')}">Fr 04.08.2015, 19:15 Uhr</span><br/> 
 									<span th:text="${match.stadium}">Statium</span>							  		
 					  			</div>
 					  			<div class="col-xs-2 vcenter">
