--- a/src/main/resources/templates/bet/form.html
+++ b/src/main/resources/templates/bet/form.html
@@ -14,8 +14,8 @@
 					<input type="hidden" th:field="*{matchId}" class="form-control" />
 					<div class="form-group">
 						<span th:text="*{teamNameOne}" ></span> - <span th:text="*{teamNameTwo}"></span>
-						<input type="text" th:field="*{goalsTeamOne}" class="form-control form-size-small" />
-						<input type="text" th:field="*{goalsTeamTwo}" class="form-control form-size-small" />
+						<input type="text" th:field="*{goalsTeamOne}" class="form-control form-size-small" required="required"/>
+						<input type="text" th:field="*{goalsTeamTwo}" class="form-control form-size-small" required="required"/>
 					</div>
 					<div class="form-group">
 						<button type="submit" class="btn btn-primary">Speichern</button>
