--- a/src/main/resources/templates/bet/list_open.html
+++ b/src/main/resources/templates/bet/list_open.html
@@ -11,15 +11,22 @@
 		<div class="row">
 			<div class="col-xs-12 col-sm-6 col-md-4" th:each="match : ${matchesToBet}">
 				<div class="panel panel-default">
-				  <div class="panel-body">
-				  	<div class="form-group">
-					    <span th:text="${match.teamOne.name}">Deutschland</span> <span> : </span><span th:text="${match.teamTwo.name}">Italien</span>
-					    <div class="btn-group pull-right" role="group">
-							<a href="#" th:href="@{'/bet/createOrUpdate/' + ${match.id}}" class="btn-lg btn-info" role="button"><span class="glyphicon glyphicon-pencil"></span></a>	
-						</div>
-				    </div>				    
-				  </div>
-				</div>					
+					<div class="panel-body">
+						<div class="row">
+							<div class="col-xs-10">
+								<span class="bold" th:text="${match.teamOne.name}">Deutschland</span> <span> - </span><span class="bold" th:text="${match.teamTwo.name}">Italien</span>
+								<br/>
+								<span th:text="${#dates.format(match.kickOffDate, 'E dd.MM.yyyy HH:mm')}">Fr 04.08.2015, 19:15 Uhr</span><br/> 
+								<span th:text="${match.stadium}">Stadium</span>							  		
+				  			</div>		
+				  			<div class="col-xs-2">
+					  			<div class="btn-group pull-right">
+									<a href="#" th:href="@{'/bet/createOrUpdate/' + ${match.id}}" class="btn btn-info" role="button"><span class="glyphicon glyphicon-hand-up"></span></a>
+	       						</div>
+       						</div>
+      					</div>
+				   </div>					   
+				</div>
 			</div>				
 		</div>
 	</div>
