--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -8,20 +8,32 @@
 	<div layout:fragment="content">
 		<div class="alert alert-success" th:if="${globalMessage}" th:text="${globalMessage}">Some Success message</div>
 		<h2>Benutzer</h2>
-			<div class="row">
-				<div class="col-xs-12 col-sm-6 col-md-4" th:each="user : ${allUsers}">
-					<div class="panel panel-default">
-					  <div class="panel-body">
-					  	<span th:text="${user.username}">Bert</span>
-					  	<span th:text="${user.rolesAsString}">ROLE_USER</span>	
-						<div class="btn-group">
-							<a href="#" th:href="@{'/user/' + ${user.id}}" class="btn-lg btn-info" role="button"><span class="glyphicon glyphicon-pencil"></span></a>
-						</div>
-					  </div>					  
+		<div class="row">
+			<div class="col-xs-12 col-sm-6 col-md-4" th:each="user : ${allUsers}">
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						<div class="row">
+							<div class="col-xs-12">
+						  		<span class="bold" th:text="${user.username}">Bert</span>				  		
+				  			</div>
+			  			</div>				  									
 					</div>
-				</div>				
-			</div>
-			<a href="#" th:href="@{/user/create}" class="btn btn-primary" role="button">Benutzer anlegen</a>	
+					<div class="panel-body">
+						<div class="row">
+							<div class="col-xs-10">
+								<span th:text="${user.rolesAsString}">ROLE_USER</span>						  		
+				  			</div>		
+				  			<div class="col-xs-2">
+					  			<div class="btn-group pull-right">
+									<a href="#" th:href="@{'/user/' + ${user.id}}" class="btn-lg btn-info" role="button"><span class="glyphicon glyphicon-pencil"></span></a>
+	       						</div>
+       						</div>
+      					</div>
+				   </div>					   
+				</div>
+			</div>				
+		</div>
+		<a href="#" th:href="@{/user/create}" class="btn btn-primary" role="button">Benutzer anlegen</a>	
 	</div>
 </body>
 </html>
