--- a/src/main/resources/templates/_navigation.html
+++ b/src/main/resources/templates/_navigation.html
@@ -17,7 +17,7 @@
 				<a class="navbar-brand" href="home.html" th:href="@{/matches}"><span class="glyphicon glyphicon-home"></span></a>
 			</div>
 			<div id="navbar" class="navbar-collapse collapse">
-				<ul class="nav navbar-nav">
+				<ul th:if="${@securityBean.isUserLoggedIn()}" class="nav navbar-nav">
 					<li th:class="${pageState_matches}"><a href="#matches" th:href="@{/matches}">Spiele</a></li>					
 					<li th:class="${pageState_bet_open}"><a href="#bet" th:href="@{/bet/open}">noch zu tippen</a></li>
 					<li th:class="${pageState_ranking}"><a href="#bet" th:href="@{/ranking}">Ranking</a></li>
@@ -25,7 +25,7 @@
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li th:if="${@securityBean.isUserLoggedIn()} == false">
-							<a href="#login" th:href="@{/login}"><span class="glyphicon glyphicon-log-in"></span> Login</a>
+						<a href="#login" th:href="@{/login}"><span class="glyphicon glyphicon-log-in"></span> Login</a>
 					</li>
 					<li th:if="${@securityBean.isUserLoggedIn()} == true" class="dropdown">
 						<a href="#" th:inline="text" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
