--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -25,7 +25,7 @@
 				  			</div>		
 				  			<div class="col-xs-2">
 					  			<div class="btn-group pull-right">
-									<a href="#" th:href="@{'/user/' + ${user.id}}" class="btn-lg btn-info" role="button"><span class="glyphicon glyphicon-pencil"></span></a>
+									<a href="#" th:href="@{'/user/' + ${user.id}}" class="btn btn-info" role="button"><span class="glyphicon glyphicon-pencil"></span></a>
 	       						</div>
        						</div>
       					</div>
