--- a/src/main/resources/templates/matches/list.html
+++ b/src/main/resources/templates/matches/list.html
@@ -36,8 +36,12 @@
 					  			</div>  			
 					  			<div class="col-xs-5">
 						  			<div class="btn-group pull-right">
-		            					<a sec:authorize="hasRole('ROLE_ADMIN')" href="#" th:href="@{'/matches/' + ${matchCommand.matchId}}" class="btn btn-info" role="button" title="Spiel ändern"><span class="glyphicon glyphicon-pencil"></span></a>								
-										<a href="#" th:href="@{'/bet/createOrUpdate/' + ${matchCommand.matchId}}" class="btn btn-info" role="button"><span class="glyphicon glyphicon-hand-up"></span></a>
+		            					<a sec:authorize="hasRole('ROLE_ADMIN')" href="#" th:href="@{'/matches/' + ${matchCommand.matchId}}" class="btn btn-info" role="button" title="Spiel Ã¤ndern">
+		            						<span class="glyphicon glyphicon-pencil"></span>
+		            					</a>								
+										<a href="#" th:href="@{'/bet/createOrUpdate/' + ${matchCommand.matchId}}" th:classappend="${matchCommand.hasMatchStarted()}? 'disabled'" class="btn btn-info" role="button" title="Spiel tippen">
+											<span class="glyphicon glyphicon-hand-up"></span>
+										</a>
 		       						</div>
 	       						</div>
        						</div>
