--- a/src/main/resources/templates/matches/form.html
+++ b/src/main/resources/templates/matches/form.html
@@ -12,35 +12,36 @@
 				<div class="col-xs-12 col-sm-6 col-md-4">
 					<input type="hidden" th:field="*{matchId}" class="form-control" />
 					<div class="form-group">
-						<label for="teamNameOne">Team One Name</label> 
+						<label for="teamNameOne">Team 1:</label> 
 						<input type="text" th:field="*{teamNameOne}" class="form-control" required="required"/>						
 					</div>
 					<div class="form-group">
-						<label for="teamResultOne">Team One Goals</label>
+						<label for="teamResultOne">Anzahl Tore Team 1:</label>
 						<input type="text" th:field="*{teamResultOne}" class="form-control form-size-small" />
 					</div>
 					<div class="form-group">
-						<label for="teamNameTwo">Team Two Name</label> 
+						<label for="teamNameTwo">Team 2:</label> 
 						<input type="text" th:field="*{teamNameTwo}" class="form-control" required="required"/>						
 					</div>
 					<div class="form-group">
-						<label for="teamResultTwo">Team Two Goals</label>
+						<label for="teamResultTwo">Anzahl Tore Team 2:</label>
 						<input type="text" th:field="*{teamResultTwo}" class="form-control form-size-small" />
 					</div>
 					<div class="form-group">
 						<label for="teamResultTwo">Anstoss:</label>
-						<input type="text" th:field="*{kickOffDate}" class="form-control" th:value="${#dates.format(matchCommand.kickOffDate, 'dd.MM.yyyy HH:mm')}" required="required"/>
+						<input type="text" th:field="*{kickOffDate}" class="form-control" placeholder="10.08.2015 20:24" th:value="${#dates.format(matchCommand.kickOffDate, 'dd.MM.yyyy HH:mm')}" required="required"/>
 					</div>
 					<div class="form-group">
 						<label for="teamResultTwo">Stadium:</label>
-						<input type="text" th:field="*{stadium}" class="form-control"/>
+						<input type="text" th:field="*{stadium}" class="form-control" placeholder="z.B. Westfalenstadion"/>
 					</div>
 					<div class="form-group">
 						<label for="teamResultTwo">Gruppe:</label>
-						<input type="text" th:field="*{group}" class="form-control" required="required"/>
+						<input type="text" th:field="*{group}" class="form-control" placeholder="z.B. Gruppe A, Viertelfinale..." required="required"/>
 					</div>
 					<div class="form-group">
 						<button type="submit" class="btn btn-primary">Speichern</button>
+						<a href="#" th:href="@{/matches}" class="btn btn-default" role="button">Abbrechen</a>	
 					</div>
 				</div>
 			</div>
