--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div layout:fragment="content">
-		<div class="alert alert-success" th:if="${globalMessage}" th:text="${globalMessage}">Some Success message</div>
+		<div class="alert" th:classappend="${globalMessage.cssClass}" th:if="${globalMessage}" th:text="${globalMessage.text}">Some Success message</div>
 		<h2>Benutzer</h2>
 		<div class="row">
 			<div class="col-xs-12 col-sm-6 col-md-4" th:each="user : ${allUsers}">
