--- a/src/main/resources/templates/ranking/list.html
+++ b/src/main/resources/templates/ranking/list.html
@@ -12,8 +12,8 @@
 			<div class="col-xs-12 col-sm-6 col-md-4">
 				<div class="panel panel-default">
 				  <div class="panel-body">
-				  	<span th:text="${ranking.username}">Fred</span> 	
-				  	<span class="badge success pull-right" th:text="${ranking.points}">0</span> 	
+				  	<span th:text="${ranking.userName}">Fred</span> 	
+				  	<span class="badge success pull-right" th:text="${ranking.totalPoints}">0</span> 	
 				  </div>					  
 				</div>
 			</div>				
