--- a/src/main/resources/templates/matches/form.html
+++ b/src/main/resources/templates/matches/form.html
@@ -12,7 +12,7 @@
 				<div class="col-xs-12 col-sm-6 col-md-4">
 					<input type="hidden" th:field="*{matchId}" class="form-control" />
 					<div class="form-group">
-						<label for="teamNameOne">Team 1:</label> 
+						<label for="teamNameOne">Team 1: *</label> 
 						<input type="text" th:field="*{teamNameOne}" class="form-control" required="required"/>						
 					</div>
 					<div class="form-group">
@@ -20,7 +20,7 @@
 						<input type="text" th:field="*{teamResultOne}" class="form-control form-size-small" />
 					</div>
 					<div class="form-group">
-						<label for="teamNameTwo">Team 2:</label> 
+						<label for="teamNameTwo">Team 2: *</label> 
 						<input type="text" th:field="*{teamNameTwo}" class="form-control" required="required"/>						
 					</div>
 					<div class="form-group">
@@ -28,12 +28,12 @@
 						<input type="text" th:field="*{teamResultTwo}" class="form-control form-size-small" />
 					</div>
 					<div class="form-group">
-						<label for="teamResultTwo">Anstoss:</label>
+						<label for="teamResultTwo">Anstoss: *</label>
 						<input type="text" th:field="*{kickOffDate}" class="form-control" placeholder="10.08.2015 20:24" th:value="${#dates.format(matchCommand.kickOffDate, 'dd.MM.yyyy HH:mm')}" required="required"/>
 					</div>
 					<div class="form-group">
 						<label for="teamResultTwo">Stadium:</label>
-						<input type="text" th:field="*{stadium}" class="form-control" placeholder="z.B. Westfalenstadion"/>
+						<input type="text" th:field="*{stadium}" class="form-control" placeholder="z.B. Westfalenstadion" required="required"/>
 					</div>					
 					<div class="form-group">
 						<label for="teamResultTwo">Gruppierung:</label>
