--- a/src/main/resources/templates/_navigation.html
+++ b/src/main/resources/templates/_navigation.html
@@ -19,7 +19,29 @@
 			<div id="navbar" class="navbar-collapse collapse">
 				<ul th:if="${@securityBean.isUserLoggedIn()}" class="nav navbar-nav">
 					<li th:class="${pageState_matches}"><a href="#matches" th:href="@{/matches}">alle Spiele</a></li>
-					<li th:class="${pageState_groups}"><a href="#groups" th:href="@{/groups}">Gruppenspiele</a></li>					
+					<li class="dropdown">
+			          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Gruppen<span class="caret"></span></a>
+			          <ul class="dropdown-menu">
+			            <li th:class="${pageState_GROUP_A}"><a href="#matches" th:href="@{/matches/group/GROUP_A}">Gruppe A</a></li>
+			            <li th:class="${pageState_GROUP_B}"><a href="#matches" th:href="@{/matches/group/GROUP_B}">Gruppe B</a></li>
+			            <li th:class="${pageState_GROUP_C}"><a href="#matches" th:href="@{/matches/group/GROUP_C}">Gruppe C</a></li>
+			            <li th:class="${pageState_GROUP_D}"><a href="#matches" th:href="@{/matches/group/GROUP_D}">Gruppe D</a></li>
+			            <li th:class="${pageState_GROUP_E}"><a href="#matches" th:href="@{/matches/group/GROUP_E}">Gruppe E</a></li>
+			            <li th:class="${pageState_GROUP_F}"><a href="#matches" th:href="@{/matches/group/GROUP_F}">Gruppe F</a></li>
+			            <li th:class="${pageState_GROUP_G}"><a href="#matches" th:href="@{/matches/group/GROUP_G}">Gruppe G</a></li>
+			            <li th:class="${pageState_GROUP_H}"><a href="#matches" th:href="@{/matches/group/GROUP_H}">Gruppe H</a></li>
+			            <li th:class="${pageState_GROUP_I}"><a href="#matches" th:href="@{/matches/group/GROUP_I}">Gruppe I</a></li>			            
+			          </ul>
+			        </li>
+			        <li class="dropdown">
+			          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Finalrunden<span class="caret"></span></a>
+			          <ul class="dropdown-menu">
+			            <li th:class="${pageState_ROUND_OF_SIXTEEN}"><a href="#matches" th:href="@{/matches/group/ROUND_OF_SIXTEEN}">Achtelfinale</a></li>
+			            <li th:class="${pageState_QUARTER_FINAL}"><a href="#matches" th:href="@{/matches/group/QUARTER_FINAL}">Viertelfinale</a></li>
+			            <li th:class="${pageState_SEMI_FINAL}"><a href="#matches" th:href="@{/matches/group/SEMI_FINAL}">Halbfinale</a></li>
+			            <li th:class="${pageState_FINAL}"><a href="#matches" th:href="@{/matches/group/FINAL}">Finale</a></li>			
+			          </ul>
+			        </li>
 					<li th:class="${pageState_bet_open}"><a href="#bet" th:href="@{/bet/open}">noch zu tippen</a></li>
 					<li th:class="${pageState_ranking}"><a href="#bet" th:href="@{/ranking}">Ranking</a></li>
 				  	<li th:class="${pageState_user}" sec:authorize="hasRole('ROLE_ADMIN')"><a href="#user" th:href="@{/user}">Benutzer</a></li>
