--- a/src/main/resources/templates/bet/list.html
+++ b/src/main/resources/templates/bet/list.html
@@ -16,7 +16,7 @@
 					    <span th:text="${bet.match.teamOne.name}">Deutschland</span> <span> - </span><span th:text="${bet.match.teamTwo.name}">Italien</span>
 					    <span class="badge" th:text="${bet.match.goalsTeamOne}">2</span><span th:if="${bet.match.goalsTeamOne != null}"> : </span><span class="badge" th:text="${bet.match.goalsTeamTwo}">1</span>
 					    <div class="btn-group pull-right" role="group">
-							<a href="#" th:href="@{'/bet/createOrUpdate/' + ${bet.match.id}}" class="btn-lg btn-info" role="button"><span class="glyphicon glyphicon-pencil"></span></a>	
+							<a href="#" th:href="@{'/bet/createOrUpdate/' + ${bet.match.id}}" class="btn-info" role="button"><span class="glyphicon glyphicon-pencil"></span></a>	
 						</div>
 				    </div>
 				    <span>getippt:</span>
