--- a/src/main/resources/templates/matches/groups.html
+++ b/src/main/resources/templates/matches/groups.html
@@ -60,7 +60,7 @@
 					  			</div>  			
 					  			<div class="col-xs-2">
 						  			<div class="btn-group">
-		            					<a sec:authorize="hasRole('ROLE_ADMIN')" href="#" th:href="@{'/matches/' + ${matchCommand.matchId}}" class="btn btn-lg btn-info" role="button" title="Spiel ändern">
+		            					<a sec:authorize="hasRole('ROLE_ADMIN')" href="#" th:href="@{'/matches/' + ${matchCommand.matchId}}" class="btn btn-info" role="button" title="Spiel ändern">
 		            						<span class="glyphicon glyphicon-pencil"></span>
 		            					</a>
 		       						</div>
@@ -70,7 +70,7 @@
 	       						<div class="col-xs-2">
 	       							<div class="btn-group">		            													
 										<a href="#" th:href="@{'/bet/createOrUpdate/' + ${matchCommand.matchId}}" th:classappend="${!matchCommand.isBettable()}? 'disabled'" 
-										   class="btn btn-lg btn-info" role="button" title="Spiel tippen">
+										   class="btn btn-info" role="button" title="Spiel tippen">
 											<span class="glyphicon glyphicon-hand-up"></span>
 										</a>
 		       						</div>
