--- a/src/main/resources/templates/matches/list.html
+++ b/src/main/resources/templates/matches/list.html
@@ -50,23 +50,21 @@
 							  			      th:text="${matchCommand.userBetGoalsTeamTwo != null ? matchCommand.userBetGoalsTeamTwo : '?'}">1</span>
 					  				</div>
 					  			</div>  			
-					  			<div class="col-xs-2">
-						  			<div class="btn-group">
-		            					<a sec:authorize="hasRole('ROLE_ADMIN')" href="#" th:href="@{'/matches/' + ${matchCommand.matchId}}" class="btn btn-lg btn-info" role="button" title="Spiel ändern">
-		            						<span class="glyphicon glyphicon-pencil"></span>
-		            					</a>
-		       						</div>
-	       						</div>
-	       						<div class="col-xs-1">
-	       						</div>
-	       						<div class="col-xs-2">
-	       							<div class="btn-group">		            													
-										<a href="#" th:href="@{'/bet/createOrUpdate/' + ${matchCommand.matchId}}" th:classappend="${!matchCommand.isBettable()}? 'disabled'" 
-										   class="btn btn-lg btn-info" role="button" title="Spiel tippen">
-											<span class="glyphicon glyphicon-hand-up"></span>
-										</a>
-		       						</div>
-	       						</div>
+					  			<div class="col-xs-5">
+					  				<div class="row">
+								         <div class="col-xs-6">
+									         <a sec:authorize="hasRole('ROLE_ADMIN')" href="#" th:href="@{'/matches/' + ${matchCommand.matchId}}" class="btn btn-info" role="button" title="Spiel ändern">
+				            						<span class="glyphicon glyphicon-pencil"></span>
+				            					</a>
+								         </div>								         
+								         <div class="col-xs-6">
+									        <a href="#" th:href="@{'/bet/createOrUpdate/' + ${matchCommand.matchId}}" th:classappend="${!matchCommand.isBettable()}? 'disabled'" 
+												   class="btn btn-info" role="button" title="Spiel tippen">
+													<span class="glyphicon glyphicon-hand-up"></span>
+												</a>
+								         </div>
+							        </div>						  			
+	       						</div>	       						
        						</div>
 					   </div>					   
 					</div>
