--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -25,18 +25,16 @@
 									<span th:text="${role}">ROLE_USER</span>
 								</div>														  		
 				  			</div>
-				  			<div class="col-xs-2">
-				  				<div class="btn-group">
-									<a href="#" th:href="@{'/user/' + ${user.id}}" class="btn btn-lg btn-info" role="button"><span class="glyphicon glyphicon-pencil"></span></a>
-	       						</div>
-				  			</div>				  
-				  			<div class="col-xs-1">
-				  			</div>			
-				  			<div class="col-xs-2">
-				  				<div class="btn-group">
-									<a href="#" th:href="@{'/user/' + ${user.id} + '/delete'}" class="btn btn-lg btn-info" role="button"><span class="glyphicon glyphicon-remove"></span></a>
-	       						</div>
-				  			</div>				  			
+				  			<div class="col-xs-5">
+				  				<div class="row">
+								    <div class="col-xs-6">
+								    	<a href="#" th:href="@{'/user/' + ${user.id}}" class="btn btn-info" role="button"><span class="glyphicon glyphicon-pencil"></span></a>
+								    </div>
+								    <div class="col-xs-6">
+								    	<a href="#" th:href="@{'/user/' + ${user.id} + '/delete'}" class="btn btn-info" role="button"><span class="glyphicon glyphicon-remove"></span></a>
+								    </div>
+								</div>
+				  			</div>				  				
       					</div>
 				   </div>					   
 				</div>
