--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -34,3 +34,13 @@ h1 {
 	padding-top: 10px;
 	padding-bottom: 10px;
 }
+
+.ranking-name {
+	font-size: 16px;
+    vertical-align: sub;
+    padding-left: 20px;
+}
+
+.label.ranking {
+	font-size: 100%;
+}
