--- a/src/main/resources/templates/ranking/list.html
+++ b/src/main/resources/templates/ranking/list.html
@@ -12,8 +12,8 @@
 			<div class="col-xs-12 col-sm-6 col-md-4">
 				<div class="panel panel-default">
 				  <div class="panel-body">
-				  	<span class="label" th:classappend="${ranking.cssRankClass}" th:text="${'Platz ' + status.count}">1</span>
-				  	<span th:text="${ranking.userName}">Fred</span>
+				  	<span class="label ranking" th:classappend="${ranking.cssRankClass}" th:text="${'Platz ' + status.count}">1</span>
+				  	<span class="ranking-name" th:text="${ranking.userName}">Fred</span>
 				  	<span class="badge success pull-right" th:text="${ranking.totalPoints}">0</span> 	
 				  </div>					  
 				</div>
