--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -18,7 +18,7 @@
 				  			</div>
 			  			</div>				  									
 					</div>
-					<div class="panel-body">
+					<div class="panel-body user-panel-body">
 						<div class="row">
 							<div class="col-xs-7">
 								<div th:each="role : ${user.roles}">
