--- a/src/main/resources/templates/matches/list.html
+++ b/src/main/resources/templates/matches/list.html
@@ -34,7 +34,7 @@
 										<span>getippt:</span>
 									</div>							  									  		
 					  			</div>					
-					  			<div class="col-xs-4">				
+					  			<div class="col-xs-4 full-box">				
 					  				<div class="short-div">
 					  					<span class="label label-as-badge big-badge" th:classappend="${matchCommand.teamResultOne != null} ? label-info : label-default" 
 					  					      th:text="${matchCommand.teamResultOne != null ? matchCommand.teamResultOne : '?'}">2</span>
