--- a/src/main/resources/templates/matches/list.html
+++ b/src/main/resources/templates/matches/list.html
@@ -51,18 +51,14 @@
 					  				</div>
 					  			</div>  			
 					  			<div class="col-xs-5">
-					  				<div class="row">
-								         <div class="col-xs-6">
-									         <a sec:authorize="hasRole('ROLE_ADMIN')" href="#" th:href="@{'/matches/' + ${matchCommand.matchId}}" class="btn btn-info" role="button" title="Spiel ändern">
+					  				<div class="row custom-button-group">
+								        <a sec:authorize="hasRole('ROLE_ADMIN')" href="#" th:href="@{'/matches/' + ${matchCommand.matchId}}" class="btn btn-info" role="button" title="Spiel ändern">
 				            						<span class="glyphicon glyphicon-pencil"></span>
-				            					</a>
-								         </div>								         
-								         <div class="col-xs-6">
-									        <a href="#" th:href="@{'/bet/createOrUpdate/' + ${matchCommand.matchId}}" th:classappend="${!matchCommand.isBettable()}? 'disabled'" 
+				            				 </a>
+				            				 <a href="#" th:href="@{'/bet/createOrUpdate/' + ${matchCommand.matchId}}" th:classappend="${!matchCommand.isBettable()}? 'disabled'" 
 												   class="btn btn-info" role="button" title="Spiel tippen">
 													<span class="glyphicon glyphicon-hand-up"></span>
-												</a>
-								         </div>
+											 </a>
 							        </div>						  			
 	       						</div>	       						
        						</div>
