--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -26,13 +26,9 @@
 								</div>														  		
 				  			</div>
 				  			<div class="col-xs-5">
-				  				<div class="row">
-								    <div class="col-xs-6">
-								    	<a href="#" th:href="@{'/user/' + ${user.id}}" class="btn btn-info" role="button"><span class="glyphicon glyphicon-pencil"></span></a>
-								    </div>
-								    <div class="col-xs-6">
-								    	<a href="#" th:href="@{'/user/' + ${user.id} + '/delete'}" class="btn btn-info" role="button"><span class="glyphicon glyphicon-remove"></span></a>
-								    </div>
+				  				<div class="row custom-button-group">
+				  					<a href="#" th:href="@{'/user/' + ${user.id}}" class="btn btn-info" role="button"><span class="glyphicon glyphicon-pencil"></span></a>
+				  					<a href="#" th:href="@{'/user/' + ${user.id} + '/delete'}" class="btn btn-info" role="button"><span class="glyphicon glyphicon-remove"></span></a>								    
 								</div>
 				  			</div>				  				
       					</div>
